[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"

wasmer = "2.0.0"
wasmer-wasi = "2.0.0"
wasmer-engine-universal = "2.0.0"
wasmer-engine-dylib = "2.0.0"
# wasmer-compiler-singlepass = "2.0.0"
# wasmer-compiler-llvm = "2.0.0"
wasmer-compiler-cranelift = "2.0.0"
